--- a/reservations.html
+++ b/reservations.html
@@ -18,7 +18,7 @@
       <h3>Current Reservations and Waiting List</h3>
       <hr>
       <a href="/"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Home</button></a>
-      <a href="/table"><button class="btn btn-danger btn-lg"><span
+      <a href="/tables"><button class="btn btn-danger btn-lg"><span
             class="fa fa-eye"></span>View Tables</button></a>
     </div>
     
@@ -43,28 +43,30 @@
                     <input class="form-control form-control-sm" type="text" id="Email" placeholder="Enter Email Address">
                 </div>
                 <div class="form-group">
-                    <label for="password">Unique ID</label>
+                    <label for="uniqueId">Unique ID</label>
                     <input class="form-control" type="uniqueId" id="uniqueId">
                 </div>
-                <button class="btn btn-primary btn-block" type="button">Submit Reservation</button>
+                <button id="add-btn" class="btn btn-primary btn-block" type="button">Submit Reservation</button>
             </div>
     </div>
   </div>
   <script type="text/javascript">
-    $("#search-btn").on("click", function() {
-      $.get("/api/tables", function(data) {
-        console.log(data);
-        if (data) {
-          $("#name").text(data.name);
-          $("#role").text(data.phoneNumber);
-          $("#age").text(data.age);
-          $("#force-points").text(data.forcePoints);
-        } else {
-          $("#name").text(
-            "The force is not strong with this one. Your character was not found.");
-          $("#stats").hide();
-        }
-      });
+    // Question: What does this code do?
+    $("#add-btn").on("click", function(event) {
+      event.preventDefault();
+      var newTable = {
+        name: $("#name").val().trim(),
+        phoneNum: $("#PhoneNum").val().trim(),
+        email: $("#Email").val().trim(),
+        uniqueId: $("#uniqueId").val().trim()
+      };
+
+      // Question: What does this code do??
+      $.post("/api/tables", newTable)
+        .then(function(data) {
+          console.log("add.html", data);
+          alert("Adding you to the list.");
+        });
     });
   </script>
 </body>
