--- a/tables.html
+++ b/tables.html
@@ -28,6 +28,7 @@
         <div class="card">
             <div class="card-header">
                 <h3><strong>Reserved Tables</strong></h3>
+                <li id="availableList"></li>
             </div>
         </div>
     </div>
@@ -39,6 +40,18 @@
         </div>
     </div>
   </div>
+  <script type="text/javascript">
+      $.get("/api/tables", function(available) {
+        console.log(available[0].name);
+            for(i=0; data.length; i++){
+                var newListitem = $('<li></li>')
+                newListitem.text(available[i].name)
+                $("#availableList").text(newListitem);
+            }
+      });
+  </script>
+  </script>
+  </script>
 </body>
 </html>
 
